uiux-service.yaml
apiVersion: v1
kind: Service
metadata:
  name: nginx-service
spec:
  type: ClusterIP
  selector:
    app: UI Compare Images
  ports:
    - protocol: TCP
      port: 80
      targetPort: 8080
