uiux-ingress-resource.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: my-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  ingressClassName: nginx
  rules:
    - host: # " my-domain-name "
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tech- nginx-service
                port:
                  number: 80
