uiux-ingress.yaml
apiVersion: networking.k8s.io/v1
kind: Ingress
metadata:
  name: techneai-ingress
  annotations:
    nginx.ingress.kubernetes.io/rewrite-target: /
spec:
  rules:
    - host: companydomain.com
      http:
        paths:
          - path: /
            pathType: Prefix
            backend:
              service:
                name: tech-nginx-service
                port:
                  number: 80
